# palettify-rust

./: .gitignore  Cargo.toml  README.md  default.nix  ex.md  flake.nix
examples/palettes/: catppuccin-macchiato  catppuccin-mocha  everforest  horizon-dark  material  nord  tokyo-night-dark
scripts/: generate-exambles.bash  generate-md.py
src/: cli.rs  image_processing.rs  lib.rs  main.rs  palette.rs  resolution.rs  video.rs  worker.rs
