[package]
name = "palettify"
version = "0.1.0"
authors = ["jo <johannes.till.schmidt+palettify@outlook.de>"]
publish = false
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
image = "0.25.5"
regex = "1.11.1"
termion = "4.0.3"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

[[bin]]
name = "palettify"
path = "src/bin/palettify.rs"
